# Enigma_Messenger

./: CMakeLists.txt  qml.qrc
app/: main.cpp
resources/qml/: Main.qml
